refactoring of resources sources